[package]
name = "mitosis-denom-manager"
version = "0.1.0"
authors = ["Eric <hashableric@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.1.2"
cosmwasm-std = { version = "1.1.2", features = ["stargate"] }
cosmwasm-storage = "1.1.2"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

mitosis-interface = { path = "../../packages/interface" }

[dev-dependencies]
cw-multi-test = "0.16.4"
